--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ variables:
 
 steps:
 # - task: NuGetToolInstaller@1
-- script: dotnet build --configuration $(buildconfiguration)
+- script: dotnet build eShopOnWeb.sln --configuration $(buildconfiguration)
   displayName: 'dotnet build $(buildconfiguration)'
 
 # - task: NuGetCommand@2
