--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,14 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
+
+- task: UseDotNet@2
+  displayName: 'Use .NET Core sdk'
+  inputs:
+    packageType: sdk
+    version: 6.0
+    installationPath: $(Agent.ToolsDirectory)/dotnet
+
 - task: NuGetToolInstaller@1
 - script: dotnet build eShopOnWeb.sln --configuration $(buildconfiguration)
   displayName: 'dotnet build $(buildconfiguration)'
